@@ -1065,7 +1065,7 @@ NONE
 
 =item $self = $cat->set_description($desc);
 
-Sets the description of this category.
+Sets the description of this category, first converting non-Unix line endings.
 
 B<Throws:>
 
@@ -1080,6 +1080,12 @@ B<Notes:>
 NONE
 
 =cut
+
+sub set_description {
+    my ($self, $val) = @_;
+    $val =~ s/\r\n?/\n/g if defined $val;
+    $self->_set( [ 'description' ] => [ $val ]);
+}
 
 #------------------------------------------------------------------------------#
 
